fix horizontal scroll

--- a/advo_site/homeapp/static/homeapp/css/style.css
+++ b/advo_site/homeapp/static/homeapp/css/style.css
@@ -1,3 +1,7 @@
+/** {*/
+/*    outline: 1px red solid;*/
+/*}*/
+
 html {
     font-size: 18px;
 }
@@ -86,7 +90,8 @@ footer img {
 
 footer .nav-link {
     color: white;
-    font-size: calc( (100vw - 320px)/(1280 - 320) * (24 - 21) + 21px);
+    word-break: break-all;
+    font-size: calc( (100vw - 320px)/(1280 - 320) * (24 - 14) + 14px);
 }
 
 footer .nav-link:hover {
@@ -207,7 +212,9 @@ footer p {
 
 .container-ch-bg p:nth-child(2) {
     hyphens: auto;
-    font-size: calc( (100vw - 320px)/(1280 - 320) * (24 - 20) + 20px);
+    word-break: break-all;
+
+    font-size: calc( (100vw - 320px)/(1280 - 320) * (24 - 16) + 16px);
 }
 
 #mission {
@@ -367,7 +374,7 @@ h2{
 .rl-pos i {
     position: absolute;
     top: 50%;
-    left: calc(50% - 30px);
+    left: calc(50% - 40px);
     font-size: calc( (100vw - 320px)/(1280 - 320) * (80 - 80) + 80px);
 }
 
@@ -401,4 +408,10 @@ h2{
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.m-0-auto {
+    display: block;
+    margin: 0 auto;
+    width: 100%;
 }
